# Vitis-AI

./: .buildinfo  .gitignore  .gitmodules  404.html  CMakeLists.txt  CONTAINER-CPU-LICENSE  CONTAINER-ROCM-LICENSE  LICENSE  README.html  README.md  TODO  build.sh  crawl-page.html  docker_run.sh  index.html  meta.yaml  search.html
Vitis-AI-Library/: CMakeLists.txt  README.md  alveo_u50_setup.sh  cmake.sh
Vitis-AI-Library/benchmark/: CMakeLists.txt
Vitis-AI-Library/benchmark/src/: main.cpp  stat_samples.cpp
Vitis-AI-Library/classification/: .gitignore  CMakeLists.txt
Vitis-AI-Library/classification/samples/: classification1.cpp  classification2.cpp  squeezenet.cpp
Vitis-AI-Library/classification/src/: classification.cpp  classification_imp.cpp  classification_imp.hpp  convert_word_list.sh
Vitis-AI-Library/classification/test/: test_accuracy_classification.cpp  test_classification.cpp  test_classification_batch.cpp  test_classification_speed.cpp
Vitis-AI-Library/cmake/: FindUnilog.cmake  FindXir.cmake  XilinxCommon.cmake  config.cmake.in  xilinx_version.c.in
Vitis-AI-Library/demo/classification/: build.sh  readme
Vitis-AI-Library/demo/seg_and_pose_detect/: build.sh  readme  seg_and_pose_detect.cpp
Vitis-AI-Library/demo/segs_and_roadline_detect/: build.sh  readme
Vitis-AI-Library/demo/yolov3/: build.sh  readme
Vitis-AI-Library/dpu_task/: CMakeLists.txt
Vitis-AI-Library/dpu_task/src/: banner.cpp  banner.hpp  configurable_dpu_task.cpp  configurable_dpu_task_imp.cpp  configurable_dpu_task_imp.hpp  deephi_chrono.hpp  dpu_task.cpp  dpu_task_imp.cpp  dpu_task_imp.hpp  graph_holder.cpp
Vitis-AI-Library/dpu_task/test/: test_base.cpp  test_dpu_task.cpp  test_it.cpp
Vitis-AI-Library/facedetect/: CMakeLists.txt
Vitis-AI-Library/facedetect/src/: detect_imp.cpp  detect_imp.hpp  facedetect.cpp
Vitis-AI-Library/facedetect/test/: test_accuracy_facedetect.cpp  test_facedetect.cpp  test_facedetect_batch.cpp
Vitis-AI-Library/facefeature/: CMakeLists.txt
Vitis-AI-Library/facefeature/src/: facefeature.cpp  facefeature_imp.cpp  facefeature_imp.hpp
Vitis-AI-Library/facefeature/test/: test_accuracy_facefeature.cpp  test_compare.cpp  test_compare_l64.cpp  test_facefeature.cpp  test_facefeature_batch.cpp
Vitis-AI-Library/facelandmark/: CMakeLists.txt
Vitis-AI-Library/facelandmark/src/: facelandmark.cpp  facelandmark_imp.cpp  facelandmark_imp.hpp
Vitis-AI-Library/facelandmark/test/: test_accuracy_face_landmark.cpp  test_face_landmark.cpp  test_face_landmark_batch.cpp
Vitis-AI-Library/general/: CMakeLists.txt
Vitis-AI-Library/general/src/: general.cpp
Vitis-AI-Library/general/test/: compare_proto.cpp
Vitis-AI-Library/general1/: CMakeLists.txt
Vitis-AI-Library/general1/src/: general.cpp  general_adapter.hpp
Vitis-AI-Library/general1/test/: generate_proto.cpp  sample.prototxt  show_proto.cpp  test_general.cpp
Vitis-AI-Library/lanedetect/: CMakeLists.txt
Vitis-AI-Library/lanedetect/src/: lanedetect.cpp  lanedetect_imp.cpp  lanedetect_imp.hpp
Vitis-AI-Library/lanedetect/test/: test_lanedetect.cpp  test_lanedetect_batch.cpp
Vitis-AI-Library/libsrc/libdpbase/: CMakeLists.txt  readme.md
Vitis-AI-Library/libsrc/libdpclassification/: CMakeLists.txt
Vitis-AI-Library/libsrc/libdpfacedetect/: CMakeLists.txt
Vitis-AI-Library/libsrc/libdpfacelandmark/: CMakeLists.txt
Vitis-AI-Library/libsrc/libdpmultitask/: CMakeLists.txt
Vitis-AI-Library/libsrc/libdpopenpose/: CMakeLists.txt
Vitis-AI-Library/libsrc/libdpposedetect/: CMakeLists.txt
Vitis-AI-Library/libsrc/libdprefinedet/: CMakeLists.txt
Vitis-AI-Library/libsrc/libdpreid/: CMakeLists.txt  build.sh
Vitis-AI-Library/libsrc/libdproadline/: CMakeLists.txt
Vitis-AI-Library/libsrc/libdpsegmentation/: CMakeLists.txt
Vitis-AI-Library/libsrc/libdpssd/: CMakeLists.txt
Vitis-AI-Library/libsrc/libdptfssd/: CMakeLists.txt
Vitis-AI-Library/libsrc/libdpyolov2/: CMakeLists.txt
Vitis-AI-Library/libsrc/libdpyolov3/: CMakeLists.txt  build.sh
Vitis-AI-Library/math/: CMakeLists.txt  buildtest
Vitis-AI-Library/math/src/: exp_neon.c  expand_and_align.cpp  fp16_c.cpp.disabled  globalavepool.cpp  image_util.cpp  max_index.cpp  preprocess_c.cpp  preprocess_neon.cpp  softmax.cpp  softmax_table.cpp  softmax_table.hpp  ssd_normalizer_c.cpp  ssd_normalizer_neon.cpp  tiling.cpp  yuv2bgr.cpp
Vitis-AI-Library/medicalsegmentation/: CMakeLists.txt
Vitis-AI-Library/model_config/: CMakeLists.txt
Vitis-AI-Library/multitask/: CMakeLists.txt
Vitis-AI-Library/openpose/: CMakeLists.txt
Vitis-AI-Library/overview/: CMakeLists.txt
Vitis-AI-Library/platenum/: CMakeLists.txt
Vitis-AI-Library/platerecog/: CMakeLists.txt
Vitis-AI-Library/posedetect/: CMakeLists.txt
Vitis-AI-Library/refinedet/: CMakeLists.txt
Vitis-AI-Library/reid/: CMakeLists.txt
Vitis-AI-Library/segmentation/: CMakeLists.txt
Vitis-AI-Library/ssd/: CMakeLists.txt
Vitis-AI-Library/tfssd/: CMakeLists.txt
Vitis-AI-Library/tracker/: .gitignore  CMakeLists.txt
Vitis-AI-Library/usefultools/: .clang-format  CMakeLists.txt  readme
Vitis-AI-Library/xnnpp/: CMakeLists.txt  cscope.files
Vitis-AI-Library/yolov2/: CMakeLists.txt
Vitis-AI-Library/yolov3/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in  header.tex
src/: CMakeLists.txt  UniLog.cpp  create_target_v2.cpp  readme.md  target.proto  target_factory.cpp
src/AKS/: .gitattributes  .gitignore  CMakeLists.txt  README.md  aks.sh  artifacts.py  cmake-examples.sh  cmake-kernels.sh  cmake.sh
src/Vitis-AI-Library/: .cmake-format.py  Makefile  README.md
src/contrib/: CMakeLists.txt  ops.cpp
src/petalinux_recipes/: README.md
src/python/: CMakeLists.txt
src/vai_library/: .clang-format  .cmake-format.py  .gitlab-ci.yml  CMakeLists.txt  Copyright.txt  Makefile  README.md  build_onnxruntime.sh  cmake.sh  license.txt
src/vai_optimizer/: CMakeLists.txt  README.md  requirements.txt
src/vai_petalinux_recipes/: README.md
src/vai_runtime/: README.md  quick_start_for_embedded.md  quick_start_for_rnn.md
test/tensor/: CMakeLists.txt  test_tensor.cpp
(+27673 files in other folders)
